fixed card image that was stretching user images wide and making them look funny

--- a/client/src/styles/Dashboard/_cards.sass
+++ b/client/src/styles/Dashboard/_cards.sass
@@ -87,7 +87,7 @@ span
     border-radius: 50px
     margin-top: 1em
     height: 100px
-    width: 120px
+    width: 100px
   .card-info 
     text-align: center
     h3 
